<resources>
    <string name="app_name">Submission</string>
    <string name="default_signup">Sign Up</string>
    <string name="default_login">Login</string>
    <string name="login_button_click">Login Clicked</string>
    <string name="signup_button_click">Sign up Clicked</string>
    <string name="signup_desc">Lengkapi data dibawah ini untuk membuat akun</string>
    <string name="default_desc_name">Nama</string>
    <string name="default_desc_email">Email</string>
    <string name="default_desc_password">Password</string>
    <string name="password_error">Password Kurang dari 6 Karakter !!</string>
    <string name="password_null">Password Harus Diisi</string>
    <string name="login_desc">Silahkan masukan Email dan Password anda untuk Login</string>
    <string name="default_logout">Logout</string>
    <string name="default_avatar">Avatar</string>
    <string name="default_desc">Description</string>
    <string name="default_add">Add Story</string>
    <string name="default_camera">Camera</string>
    <string name="default_gallery">Gallery</string>
    <string name="default_desc_hint">Tell other about your picture …</string>
    <string name="default_upload">Upload</string>
    <string name="default_capture">Capture</string>
    <string name="default_switch_camera">Switch Camera</string>
    <string name="failed_takePhoto">Gagal mengambil gambar.</string>
    <string name="success_takePhoto">Berhasil mengambil gambar.</string>
    <string name="permission_denied">Tidak mendapatkan permission.</string>
    <string name="invalid_image">Silahkan pilih dan masukkan gambar terlebih dahulu</string>
    <string name="camera_launch_fail">Gagal memunculkan kamera.</string>
    <string name="welcome_desc">Selamat Datang di Dicoding Story App</string>
    <string name="register_success">Akun Anda Berhasil Dibuat</string>
    <string name="register_failed">, Harap Coba Lagi</string>
    <string name="default_logo">Logo</string>
    <string name="default_captured_image">Captured Image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_view_desc">Map View</string>
    <string name="default_reload">Reload</string>
</resources>