<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.WelcomeActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:srcCompat="@drawable/storyapp_logo"
            android:id="@+id/logo_welcome"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/default_logo" />

    <TextView
            android:text="@string/welcome_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_welcome_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:gravity="center"
            android:textAlignment="center"
            android:alpha="0"/>

    <Button
            android:text="@string/default_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/to_login_button"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_desc"
            android:alpha="0"/>

    <Button
            android:text="@string/default_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/to_signup_button"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_desc"
            android:alpha="0"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline1"
            app:layout_constraintGuide_begin="205dp"
            android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline5"
            app:layout_constraintGuide_begin="375dp"
            android:orientation="horizontal" />
</androidx.constraintlayout.widget.ConstraintLayout>