<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AddStoryActivity">

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loading_add_story"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="20dp"
            android:visibility="gone" />

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/ic_baseline_image_24"
            android:id="@+id/imgv_captured"
            app:layout_constraintEnd_toEndOf="@+id/desc_inputlayout"
            app:layout_constraintStart_toStartOf="@+id/desc_inputlayout"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/default_captured_image" />

    <Button
            android:text="@string/default_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_camera"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            android:layout_marginTop="8dp" />

    <Button
            android:text="@string/default_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_gallery"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            android:layout_marginTop="8dp" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_begin="205dp"
            android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline3"
            app:layout_constraintGuide_begin="365dp"
            android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline4"
            app:layout_constraintGuide_begin="301dp"
            android:orientation="horizontal" />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/desc_inputlayout"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="64dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/default_desc_hint"
                android:id="@+id/desc_edittext"
                android:gravity="top" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/default_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/upload_story_button"
            app:layout_constraintTop_toBottomOf="@+id/desc_inputlayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>