<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SignUpActivity">

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loading_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="20dp"
            android:visibility="gone" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/storyapp_logo"
            android:id="@+id/logo_signup"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/email_signup_desc"
            app:layout_constraintVertical_bias="0.63"
            android:contentDescription="@string/default_logo" />

    <TextView
            android:text="@string/signup_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.35"
            android:alpha="0"/>

    <TextView
            android:text="@string/default_desc_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_signup_desc"
            app:layout_constraintStart_toStartOf="@+id/signup_desc"
            app:layout_constraintTop_toBottomOf="@+id/signup_desc"
            android:layout_marginTop="16dp"
            android:alpha="0"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/name_signup_desc"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/name_signup_desc"
            android:id="@+id/name_singnup_inputlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            android:alpha="0">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_signup_edittext"
                android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:text="@string/default_desc_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_signup_desc"
            app:layout_constraintStart_toStartOf="@+id/name_singnup_inputlayout"
            app:layout_constraintTop_toBottomOf="@+id/name_singnup_inputlayout"
            android:layout_marginTop="8dp"
            android:alpha="0"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/email_signup_desc"
            app:layout_constraintStart_toStartOf="@+id/email_signup_desc"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            android:id="@+id/email_signup_inputlayout"
            android:alpha="0">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_signup_edittext"
                android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:text="@string/default_desc_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_signup_desc"
            app:layout_constraintTop_toBottomOf="@+id/email_signup_inputlayout"
            app:layout_constraintStart_toStartOf="@+id/email_signup_inputlayout"
            android:layout_marginTop="8dp"
            android:alpha="0"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/password_signup_desc"
            app:layout_constraintStart_toStartOf="@+id/password_signup_desc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            android:id="@+id/pasword_signup_inputlayout"
            android:alpha="0">

        <submission.dicoding.view.PasswordEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/password_signup_edittext"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/ic_baseline_person_add_alt_1_24"
            android:id="@+id/signup_button"
            app:layout_constraintTop_toBottomOf="@+id/pasword_signup_inputlayout"
            app:layout_constraintEnd_toEndOf="@+id/pasword_signup_inputlayout"
            app:layout_constraintStart_toStartOf="@+id/pasword_signup_inputlayout"
            android:layout_marginTop="16dp"
            android:focusable="true"
            android:contentDescription="@string/default_signup"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Button"
            android:alpha="0"/>


</androidx.constraintlayout.widget.ConstraintLayout>