<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.DetailStoryActivity">

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    tools:srcCompat="@tools:sample/avatars"
                    android:id="@+id/imgv_detail_avatar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/default_avatar" />

            <TextView
                    android:text="@string/default_desc_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_name"
                    app:layout_constraintTop_toBottomOf="@+id/imgv_detail_avatar"
                    app:layout_constraintEnd_toEndOf="@+id/imgv_detail_avatar"
                    app:layout_constraintStart_toStartOf="@+id/imgv_detail_avatar"
                    android:layout_marginTop="16dp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_desc"
                    android:text="@string/default_desc"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
                    app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
                    app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>